files/script/test/parse_error/var/test_var_error2.nl
def main()
{
    var string = 100I12

}
#script("test/parse_error/var/test_var_error2.nl")